kube/ingress/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  ports:
    - name: web-port
      port: 443
      targetPort: 443
  selector:
    app: webserver
  type: ClusterIP
