kube/ingress/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;

spec:
  tls:
    - hosts:
      secretName: tls-secret
  rules:
    - http:
        paths:
        - path: /dashboard(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
